Fixed some spacing issues

--- a/src/assets/scss/app.scss
+++ b/src/assets/scss/app.scss
@@ -159,6 +159,9 @@ body {
 
 .content {
 	padding: 1rem;
+
+}
+.min-height-600 {
 	min-height: 600px;
 }
 
